security(sast): automatically remediate 1 infrastructure issue(s) in VulnerableTaskHolder.java